@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( cli libmpv ) dvdnav? ( dvd ) egl? ( opengl X ) enca? ( iconv )
 SLOT=0
 SRC_URI=http://ftp.waf.io/pub/release/waf-1.8.4 https://github.com/mpv-player/mpv/archive/v0.8.2.tar.gz -> mpv-0.8.2.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	dfe060cb70d89757fde5c1ff8405e950	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	waf-utils	b5ddb40c4095c9a1a3f6fd49d32fd922
-_md5_=d097ce401311dae4edbcadfe9e320da6
+_md5_=c5df09f581144493e7aaf786fdb89ace
