@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install postinst postrm preinst prepare
-DEPEND=>=dev-libs/glib-2.18:2 app-arch/xz-utils >=dev-util/intltool-0.40 virtual/pkgconfig sys-devel/gettext !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=>=dev-libs/glib-2.18:2 app-arch/xz-utils >=dev-util/intltool-0.40 virtual/pkgconfig sys-devel/gettext !<=x11-libs/libfm-1.2.3 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=A library for file management
 EAPI=5
 HOMEPAGE=http://pcmanfm.sourceforge.net/
@@ -9,4 +9,4 @@ RDEPEND=>=dev-libs/glib-2.18:2
 SLOT=0/4.3.0
 SRC_URI=http://dev.gentoo.org/~hwoarang/distfiles/libfm-1.2.3.tar.xz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=a8dcc2381ad3effcf126b9f5e0992b2a
+_md5_=c5fc6f0d88d1d538d931e93f58dfbfa2
