@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST libfm-1.2.3.tar.xz 898256 SHA256 c692f1624a4cbc8d1dd55f3b3f3369fbf5d26f63a916e2c295230b2344e1fbf9 SHA512 f4c214daffc47f05ba31c65203ab0542a03f5a246ea4bb62b6b365ac3fa120a1a51e37b00f8a43afe56875eb69f9be327ac724dafb6fc2de13aa77deea23f443 WHIRLPOOL ae5354c5ef5154ebce8a9124b47e0a645171d50d4034fd1e6000ff084acc15261398029c58b067b9027d4ba68d36d8addf91a28678c91a3fbd9ce0806e9b6046
-EBUILD libfm-extra-1.2.3.ebuild 2652 SHA256 bac008c87fa0e97f12650f0a29b3120ce731fa6afcf948a9042f9e852333d1c5 SHA512 5475cb4108e64a5d7d356021620e95055991924761df01212c67a35e6af44843f77f3b0ea5e0a46f1199f30931cdd829e9d04f8091e810dcfab756ea2632ba9b WHIRLPOOL 9537b4897ae7265e948259dffa40463d6d57eb0bc2abc35beb2f0e8a99046b2eaef24045abbd7bd2d0ca2da20c0a0ca8f5b658859a2dbaf4e582be4e2e95e443
-MISC ChangeLog 419 SHA256 dbd13bd2d82209d58826d2ce8c2b050a2bf75f2f8e086b1b36124a62c000de2c SHA512 3c1746d0abb5db71aae786339372c67e67659b6d6bb9301057e8414735a852fd77da00f47c99822c9caf6a8b449dbeaa9244e3a5af70523c3edb0dd2051c3ddb WHIRLPOOL b65e97b2d1ef93ca0aea8b2ae473646c240ca62f7c9022a0f413a86c3d83d551417eeff40b4d0fe739edcfe34d8265d71ed12f389f48114a46193f396af27333
+EBUILD libfm-extra-1.2.3.ebuild 2677 SHA256 755660fbaada04046b776c7752a3c6f3fc95423be22422f6a1faa8fca8ff73d5 SHA512 a95aff37cfb74f90503e1f5ea571b7aeca0b9812b58483b2dda4eafd6f54a3c969c86fed65f08d31c9f3e5a27bbdc002e958a82bed2dd10f6505e6d1ba9db755 WHIRLPOOL 0f80eb4952d23c3815b1c481ccfaa5c75643aff375bb14d198fbfc621fe3f0db057b69fec28821d4b4928356a744f106c692376666a0d6ad33827a29c2bcc412
+MISC ChangeLog 552 SHA256 42987242ca0183493fb74232f3cd8f52ad8e8b2ab6940a87a17d0fc6c9dcb05d SHA512 a27733572f78dbb4c874cc1631302d6b82d31c46e1aac24a6ee8f8c20ec3afb9fedcacbc7483bcb338426228fc721303152bdc557440e9c7080a250efbce34e3 WHIRLPOOL d80f839f5ca57ff0b33e1c60716457a94acc169a56f1d96560cceae05b16ab4feb0613b41dd1f6ceb43817a65cd93bee7df7d4d3717b450ac01442ec41a26f0b
 MISC metadata.xml 179 SHA256 f2fb09f29eb86b99a43176e7c3e23a9050944bc16d3c8a24de81d68769f7972c SHA512 3e4198ffd569b62911dc8625912ebbf9935ba8fed89b89d8fc9365fc5ae8820e0c191a0eb6bfb1e7945b8ed598004f3b1d945314bb7b9dfcc366174598084ee0 WHIRLPOOL af31d78fddcc9f5642aae3fb6ee6ba593c1c3f8e5fa4b16636b23c363418c1bb10d3b82ada595403ec2099d5edf69a31f8080af6015bdf68b1de4a6f423f4842
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU+Z+wXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU+ogrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOEiwQAKofzZFu1d4J8zGbe/OmJTYn
-dxBHcbUQcRQ6wEDgvEugM0oi15kWySTNsJAUyUkjIC0CLD6lyeJEUPSN5CZ4XgVv
-IBwG4YhWorSf1cH6x27oClN2E4y8RMjLy4tAB7yw+FDuNIbYeQ4YaoIs998qmun2
-gCdCr2KjIEVDdKZR1wx5+W0q/QJCIK+H8/oJne3Pz0Ejtg09TVulzx19xTVOa4S+
-uu1XnFvqkIV8mW/NDGtF77xU1Bjqp94fQf5QnJDRjneZjMyGr+Nca4N92Eeacyiq
-LZ9tfOfP8dYNJY58yS0jCDo4bDSPhnwCBPLc9JGcFGrrik6XA07UnEzd8FhMMyUk
-9DsVc37HVR2+v5zxfbaO7YL2cC8Wb2D2AimRsds4ykQ6vEBT+Xyr3sa1PYIM+eCV
-61/KqjZWyavOT1WD3RvIum8nKsggRu4DFTsjXGAJz2BbpxYbFIq13Y/b/DySZou6
-44NO/ufY5kZM/8dDbthnhqHeXWOnlXS5GadNy80lcswKtffxitbAL+9vqaIVbluH
-fsCKmSjnZxNHXCFskZOeJlGdun2/Xlr47ckINRN3b839XN9PMd2nW4I6I7KPR8jA
-MaZf/8ck2NZW+l9xEa+thiBpY6VF1ekpcDSY1niY2y5Cg04EgR8tRvem/2Dctrws
-aHCRzE+7CBi17pMk9UvE
-=RMWq
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOHcAQAMjuqHWYVJzJXIdyYbd5LqpI
+jOqB+Io+EHfNWMgMusyYy8EZEb7VDP6kUFHRejOBtUtHdERH1slW4bhO+a2mQF2G
+rfaNvpYw2N2jrl4HHqdxniBzZPVLyXtKnpF7urnvIRqf/zYnAL89Qd8OQI+BuVy7
+4PuHQDdkKgtmldVKI/e/FzV1j6IVDkuHabKWf1aBVVbTrFcT3rF+SucviRaweCu3
+y5YtDWv2o1jGBROafaDm86GFqIwxqa0UcqyMgidO5YmmqGpTYr4CA1PVDodBvjye
+Gjgveclbp6q5bteDdq2lVqat4NVM8LdOFCysT+JMM6I+idpz5bfYGgt5IGXBDoAu
+Qw2Nr944MC+eDcEwOislfInPr0NvR7W7PAqDUHWKy3LOxEd2mj3MvW3nw73lFIVz
+X4IIpNikzm1rICrT8h41VkTuE3cYIKFUPUhmAqWxR/x4IKy3yvT2V0Jdsf9itY1B
+tgvJP1xgfGD3cS8amBigA2I4ffP7fXSSJ5zdYnAjmoeKQdF7ELzvF/xwVa0iqc8j
+2sLaiYl65MlQictmxV3qHhER2AVGgR9NZ5gBscCvu0D/tpGP/IYqaoJiSN0LijAo
+Hd9gfZVgo7zhoFlzpje72thhbhh74tFbjyOuUxZtrNpe8Z3MLlYmvpIR2RlJJMJn
+Pc12hV12E8caqZo+xANS
+=0yn3
 -----END PGP SIGNATURE-----
