@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mpv
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.119 2015/03/05 14:23:43 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.120 2015/03/07 05:27:59 yngwin Exp $
+
+  07 Mar 2015; Ben de Groot <yngwin@gentoo.org> mpv-0.8.2.ebuild:
+  Add RELEASE_NOTES to DOCS (bug #542344)
 
 *mpv-0.8.2 (05 Mar 2015)
 
